--- a/design.html
+++ b/design.html
@@ -27,8 +27,8 @@
         	</DIV>
     	</DIV>
     	<DIV style="position: relative; bottom: 2px; left: 50%; margin-left: -100px; text-align: center; width: 200px;">
-    		<a href="mailto:sgourish@uwaterloo.ca" style="text-decoration: none; color: black; font-weight: bold; font-size: 16px; font-family: 'Georgia', serif;">
-        		sgourish@uwaterloo.ca
+    		<a href="mailto:email" style="text-decoration: none; color: black; font-weight: bold; font-size: 16px; font-family: 'Georgia', serif;">
+        		email
     		</a>
 		</DIV>
 	</BODY>
