--- a/root.html
+++ b/root.html
@@ -74,8 +74,8 @@
     		<a href="https://ca.pinterest.com/ideas/" target="_blank" style="display: block; margin: 10px auto; padding: 10px; width: 150px; background: rgba(34, 167, 240, 0.9); border-radius: 5px; color: black;">Pinterest</a>
     	</DIV>
     	<DIV style="position: relative; bottom: 2px; left: 50%; margin-left: -100px; text-align: center; width: 200px;">
-    	<a href="mailto:sgourish@uwaterloo.ca" style="text-decoration: none; color: black; font-weight: bold; font-size: 16px; font-family: 'Georgia', serif;">
-        	sgourish@uwaterloo.ca
+    	<a href="mailto:email" style="text-decoration: none; color: black; font-weight: bold; font-size: 16px; font-family: 'Georgia', serif;">
+        	email
     	</a>
 	</DIV>
 	</BODY>
