--- a/sgourish.html
+++ b/sgourish.html
@@ -75,7 +75,7 @@
     	</UL>
 
     	<DIV class="contact">
-        	<a href="mailto:sgourish@uwaterloo.ca">sgourish@uwaterloo.ca</a>
+        	<a href="mailto:email">email</a>
     	</DIV>
 	</BODY>
 </HTML>
